charts/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-app
  namespace: kartheek-kumar-reddy
  labels:
    app: my-app
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 9090-tcp
      protocol: TCP
      port: 9090
      targetPort: 9090
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: my-app
    deployment: my-app
